// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs/textarea/field <Field /> With additional props renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
/>
`;

exports[`#cogs/cogs/textarea/field <Field /> With required props renders 1`] = `
<textarea
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
/>
`;
